--- a/a.css
+++ b/a.css
@@ -240,13 +240,15 @@
     font-size: 18px;
   }
 
-  section.skills{
+  section.skills,
+  section.portfolio{
     max-width: 940px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 60px;
   }
 
+  section.portfolio>h2,
   section.skills>h2{
     text-align: center;
     color: #3d4451;
@@ -292,11 +294,66 @@
     border-radius: 2px;
   }
   
-  .test1{
-    display: block;
-    border: 10px solid transparent;
-    width: 0px;
-    /*border-left-color: e6686a;*/
-    border-left-color: black;
-    border-top-width: 0px;
+  section.portfolio{
+    text-align: center;
+  }
+
+  section.portfolio >nav{
+    text-align: center;
+    display: inline-block;
+    vertical-align: top;
+    margin-top: 32px;
+  }
+
+  section.portfolio >nav >ol{
+    display: inline-block;
+    vertical-align: top;
+  }
+
+  section.portfolio >nav >ol >li{
+    float: left;
+    margin-left: 40px;
+    cursor: pointer;
+  }
+
+  section.portfolio >nav >ol >li:nth-child(1){
+    margin-left: 0;
+  }
+
+  section.portfolio >nav .bar{
+    background: white;
+    height: 5px;
+    border-radius: 2px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+  }
+
+  section.portfolio >nav .bar-inner{
+    background: #e6686a;
+    height: 100%;
+    border-radius: 2px;
+    transition: all 0.3s;
+  }
+
+  section.portfolio >nav .bar.state-1 .bar-inner{
+    margin-left:0;
+    width: 50px;
+  }
+
+  section.portfolio >nav .bar.state-2 .bar-inner{
+    margin-left:65px;
+    width: 50px;
+  }
+
+  section.portfolio >nav .bar.state-3 .bar-inner{
+    margin-left: 140px;
+    width: 96;
+  }
+
+  section.portfolio .works{
+    position: relative;
+  }
+  section.portfolio .works > .big,
+  section.portfolio .works > .small {
+    position: absolute;
   }
