--- a/a.css
+++ b/a.css
@@ -236,8 +236,9 @@
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    font-family: Georgia, "Times New Roman", Times, sans-serif;
+    font-family: STKaiti;
     font-size: 18px;
+    
   }
 
   section.skills,
