--- a/a.css
+++ b/a.css
@@ -1,214 +1,291 @@
-.clearfix::after{
+.clearfix::after {
     content: '';
     display: block;
     clear: both;
-  }
-  
-  body{
-    background-color: #efefef;
-    margin:0px;
-  }
-  
-  * {
-    padding:0px;
-    margin: 0px;
-  }
+}
 
-  hr{
+body {
+    background-color: #efefef;
+    margin: 0px;
+}
+
+* {
+    padding: 0px;
+    margin: 0px;
+}
+
+hr {
     height: 0;
     border: none;
     border-top: 1px solid #dedede;
-  }
+}
 
-  h1,h2,h3,h4,h5,h6{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-weight: normal;
-  }
+}
 
-  ul,ol{
+ul,
+ol {
     list-style: none;
-  }
+}
 
-  a{
-    text-decoration: none;/*去除下划线、继承body的颜色*/
-    color:inherit;
-  }
-  
-  .topNavBar{
+a {
+    text-decoration: none;
+    /*去除下划线、继承body的颜色*/
+    color: inherit;
+}
+
+.topNavBar {
     /*padding-top:24px;
     padding-bottom:24px;
     padding-left:16px;
     padding-right:16px;
     */
-    position:fixed;
+    position: fixed;
     top: 0px;
     left: 0px;
     width: 100%;
-    padding:20px 0px 20px 0px;
-  }
+    padding: 20px 0px 20px 0px;
+    transition: all 0.5s;
+    z-index: 1;
+    color: #B7B7B7;
+}
 
-  .topNavBar-inner{
+.topNavBar.sticky {
+    background: white;
+    padding: 10px 0px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+    color: #3d4451;
+}
+
+.topNavBar-inner {
     padding: 0 16px;
-  }
+}
 
- .topNavBar nav{
-    padding-top:4px;
-    padding-bottom:4px;
- }
+.topNavBar nav {
+    padding-top: 4px;
+    padding-bottom: 4px;
+}
 
-  .topNavBar nav>ul{
-    list-style:none;/*去除无序列表圆点、外边距属性top right bottom left、内边距属性*/
-    margin:0;
-    padding:0;
-  }
-  
-  .topNavBar nav>ul>li{
-    float:left;
-    margin-left:17px;
-    margin-right:17px;
-  }
-  
-  .topNavBar nav>ul>li>a{
-    font-size:12px; /*定义字体大小、定义字体颜色、加粗、设置单独边界、此元素显示块级元素前后有换行符*/
-    color:#B7B7B7;
-    text-decoration:none;
+.topNavBar nav>ul {
+    list-style: none;
+    /*去除无序列表圆点、外边距属性top right bottom left、内边距属性*/
+    margin: 0;
+    padding: 0;
+}
+
+.topNavBar nav>ul>li {
+    float: left;
+    margin-left: 17px;
+    margin-right: 17px;
+    position: relative;
+}
+
+.topNavBar nav>ul>li>a {
+    font-size: 12px;
+    /*定义字体大小、继承topNavBar颜色、加粗、设置单独边界、此元素显示块级元素前后有换行符*/
+    color: inherit;
+    text-decoration: none;
     font-weight: bold;
-    border-top:3px solid transparent;
+    border-top: 3px solid transparent;
     border-bottom: 3px solid transparent;
     padding-top: 5px;
     padding-bottom: 5px;
     display: block;
-  }
-  
-  .topNavBar nav>ul>li>a:hover{/*触发效果，当鼠标放到导航上会有一个3px的线段出现*/
-    border-bottom: 3px solid #e06567;
-  }
-  
-  .topNavBar .logo{/*将.rs及.card中相同的部分放到一起*/
-    font-size:24px;
-    font-family:"Arial Black";/*设置字体*/
-  }
-  .topNavBar .logo .rs{
-    margin-right:4px;
-    color:#e6686a;
-  }
-  
-  .topNavBar .logo .card{
-    color:#9a9da2;
-  }
- 
-  .banner{
+    position: relative;
+}
+
+.topNavBar nav>ul>li.active>a::after {
+    /*触发效果，当鼠标放到导航上会有一个3px的线段出现*/
+    content: '';
+    display: block;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background: #e06567;
+    height: 3px;
+    animation: menuSlide 0.3s;
+}
+
+@keyframes menuSlide {
+    0% {
+        width: 0;
+    }
+    100% {
+        width: 100%;
+    }
+}
+
+.topNavBar .submenu {
+    display: none;
+    position: absolute;
+    right: 0;
+    top: 100%;
+    background: white;
+    color: #3d4451;
+    animation: menuSub 0.3s;
+}
+
+@keyframes menuSub {
+    0% {
+        margin-right: 100%;
+    }
+    100% {
+        margin-right: 0%;
+    }
+}
+
+.topNavBar li.active .submenu {
+    display: block;
+}
+
+.topNavBar .submenu>li {
+    /*不让li元素换行*/
+    white-space: nowrap;
+    padding: 10px;
+}
+
+.topNavBar .logo {
+    /*将.rs及.card中相同的部分放到一起*/
+    font-size: 24px;
+    font-family: "Arial Black";
+    /*设置字体*/
+}
+
+.topNavBar .logo .rs {
+    margin-right: 4px;
+    color: #e6686a;
+}
+
+.topNavBar .logo .card {
+    color: #9a9da2;
+}
+
+.banner {
     height: 515px;
-    background-image:url(./picture/rs-cover.jpg); /*添加背景图片*/
+    background-image: url(./picture/rs-cover.jpg);
+    /*添加背景图片*/
     background-position: center;
-    background-size: cover;/*背景图片适应*/
-  }
+    background-size: cover;
+    /*背景图片适应*/
+}
 
-  .banner .mask{
+.banner .mask {
     height: 515px;
-    background-color: rgba(0,0,0,0.8);
-  }
+    background-color: rgba(0, 0, 0, 0.8);
+}
 
-  .userCard{
+.userCard {
     max-width: 940px;
     margin-left: auto;
     margin-right: auto;
     background-color: #ffffff;
-    box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.2);/*添加阴影*/
-  }
+    box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
+    /*添加阴影*/
+}
 
-  .userCard .welcome{
+.userCard .welcome {
     background-color: #e6686a;
     color: white;
     display: inline-block;
     padding: 4px 16px;
     line-height: 22px;
     position: relative;
-  }
+}
 
-  .userCard .welcome .triangle{
+.userCard .welcome .triangle {
     display: block;
     border: 10px solid transparent;
     width: 0px;
     /*border-left-color: e6686a;*/
-    border-left-color: #e6686a;/*三角形*/
+    border-left-color: #e6686a;
+    /*三角形*/
     border-top-width: 0px;
     position: absolute;
     left: 4px;
     top: 100%;
-  }
+}
 
-  .userCard .picture{
+.userCard .picture {
     float: left;
-  }
+}
 
-  .userCard .text{
+.userCard .text {
     float: left;
     padding-left: 65px;
     width: 450px;
-  }
+}
 
-  .userCard .pictureAndText{
+.userCard .pictureAndText {
     padding: 50px;
-  }
+}
 
-  .userCard .text h1{
+.userCard .text h1 {
     padding-top: 26px;
-  }
+}
 
-  .userCard .text hr{
+.userCard .text hr {
     margin: 20px 0px;
-  }
+}
 
-  .userCard dl dt,
-  .userCard dl dd{
+.userCard dl dt,
+.userCard dl dd {
     float: left;
     padding: 5px 0;
-  }
+}
 
-  .userCard dl dt{
+.userCard dl dt {
     width: 30%;
     font-weight: bold;
-  }
+}
 
-  .userCard dl dd{
+.userCard dl dd {
     width: 70%;
     color: #9da0a7;
-  }
+}
 
-  .userCard > footer.media{
-    background-color:#e6686a;
+.userCard>footer.media {
+    background-color: #e6686a;
     text-align: center;
-  }
+}
 
-  .userCard > footer.media >a{
+.userCard>footer.media>a {
     display: inline-block;
     width: 40px;
     line-height: 30px;
     padding: 5px 0;
-    border-radius: 50%;/*圆*/
+    border-radius: 50%;
+    /*圆*/
     margin: 16px;
-  }
+}
 
-  .userCard > footer.media > a:hover{/*触发*/
+.userCard>footer.media>a:hover {
+    /*触发*/
     background-color: #cf5d5f;
-  }
+}
 
-  .userCard svg{
+.userCard svg {
     width: 30px;
     height: 30px;
     fill: white;
-    vertical-align:top;
-  }
+    vertical-align: top;
+}
 
-  body>main{
+body>main {
     margin-top: -350px;
-  }
+}
 
-  body>main .downlocadResume-wrapper{
+body>main .downlocadResume-wrapper {
     text-align: center;
-  }
+}
 
-  body>main .downloadResume{
+body>main .downloadResume {
     border: 1px solid #cdcfd1;
     background: #efefef;
     font-size: 14px;
@@ -219,137 +296,140 @@
     color: #3d4451;
     font-weight: bold;
     margin: 32px 0;
-    transition: box-shadow 0.2s;/*阴影0.2秒显示*/
-  }
+    transition: box-shadow 0.2s;
+    /*阴影0.2秒显示*/
+}
 
-  body> main .downloadResume:hover{
-    box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.5);
-  }
+body>main .downloadResume:hover {
+    box-shadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.5);
+}
 
-  body >main .introduce{
+body>main .introduce {
     max-width: 940px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
     font-family: STKaiti;
     font-size: 18px;
-    
-  }
+}
 
-  section.skills,
-  section.portfolio{
+section.skills,
+section.portfolio {
     max-width: 940px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 60px;
-  }
+}
 
-  section.portfolio>h2,
-  section.skills>h2{
+section.portfolio>h2,
+section.skills>h2 {
     text-align: center;
     color: #3d4451;
-    font-size:34px;
+    font-size: 34px;
     line-height: 1.2;
     font-weight: 600;
-  }
+}
 
-  section.skills>h3{
+section.skills>h3 {
     font-size: 14px;
     line-height: 1.1;
     padding-right: 40px;
-  }
+}
 
-  section.skills>ol{
+section.skills>ol {
     background: white;
-    box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.5);
+    box-shadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.5);
     padding: 42px 50px 10px;
     margin-top: 30px;
-  }
+}
 
-  section.skills >ol >li{
+section.skills>ol>li {
     float: left;
     width: 48%;
     box-sizing: border-box;
-  }
+}
 
-  section.skills >ol >li:nth-child(even){/*偶数float:right*/
+section.skills>ol>li:nth-child(even) {
+    /*偶数float:right*/
     float: right;
-  }
+}
 
-  section.skills .progressBar{
+section.skills .progressBar {
     height: 3px;
     background: #fae1e1;
     border-radius: 2px;
     margin: 4px 0 40px;
-  }
+}
 
-  section.skills .progressBar .progress{
+section.skills .progressBar .progress {
     height: 3px;
     background: #e6686a;
     width: 70%;
     border-radius: 2px;
-  }
-  
-  section.portfolio{
-    text-align: center;
-  }
+}
 
-  section.portfolio >nav{
+section.portfolio {
+    text-align: center;
+}
+
+section.portfolio>nav {
     text-align: center;
     display: inline-block;
     vertical-align: top;
     margin-top: 32px;
-  }
+}
 
-  section.portfolio >nav >ol{
+section.portfolio>nav>ol {
     display: inline-block;
     vertical-align: top;
-  }
+}
 
-  section.portfolio >nav >ol >li{
+section.portfolio>nav>ol>li {
     float: left;
     margin-left: 40px;
     cursor: pointer;
-  }
+}
 
-  section.portfolio >nav >ol >li:nth-child(1){/*第一个浮动左边margin-left:0*/
+section.portfolio>nav>ol>li:nth-child(1) {
+    /*第一个浮动左边margin-left:0*/
     margin-left: 0;
-  }
+}
 
-  section.portfolio >nav .bar{
+section.portfolio>nav .bar {
     background: white;
     height: 5px;
     border-radius: 2px;
     margin-top: 10px;
     margin-bottom: 20px;
-  }
+}
 
-  section.portfolio >nav .bar-inner{
+section.portfolio>nav .bar-inner {
     background: #e6686a;
     height: 100%;
     border-radius: 2px;
     transition: all 0.3s;
-  }
+}
 
-  section.portfolio >nav .bar.state-1 .bar-inner{
-    margin-left:0;
+section.portfolio>nav .bar.state-1 .bar-inner {
+    margin-left: 0;
     width: 50px;
-  }
+}
 
-  section.portfolio >nav .bar.state-2 .bar-inner{
-    margin-left:65px;
+section.portfolio>nav .bar.state-2 .bar-inner {
+    margin-left: 65px;
     width: 50px;
-  }
+}
 
-  section.portfolio >nav .bar.state-3 .bar-inner{
+section.portfolio>nav .bar.state-3 .bar-inner {
     margin-left: 140px;
     width: 96;
-  }
+}
 
-  section.portfolio .works{
+section.portfolio .works {
     position: relative;
-  }
-  section.portfolio .works > .big,
-  section.portfolio .works > .small {
+}
+
+section.portfolio .works>.big,
+section.portfolio .works>.small {
     position: absolute;
-  }
+}
