--- a/a.css
+++ b/a.css
@@ -452,3 +452,7 @@ section.portfolio .works>.big,
 section.portfolio .works>.small {
     position: absolute;
 }
+.swiper-container {
+    width: 600px;
+    height: 300px;
+}
